--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Handjet:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Handjet:wght@400;700&display=swap");
 
 * {
   box-sizing: border-box;
@@ -6,7 +6,7 @@
 
 body {
   margin: 0;
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: radial-gradient(#186a5e, #053339);
@@ -15,6 +15,7 @@ body {
 }
 
 #content {
+  position: relative;
   max-width: 60rem;
   margin: 2rem auto;
   padding: 2rem;
@@ -24,7 +25,7 @@ body {
 }
 
 h1 {
-  font-family: 'Handjet', monospace;
+  font-family: "Handjet", monospace;
   text-align: center;
   text-transform: uppercase;
   color: #c1e2dd;
@@ -43,6 +44,44 @@ header p {
   margin: 0;
   text-align: center;
   color: #c6f4f2;
+}
+
+#home-button {
+  position: absolute;
+  top: 2.8rem;
+  right: 0;
+  border-radius: 10px 0 0 10px;
+  padding: 0.5rem;
+  border: 1px solid #54a399;
+  border-right: none;
+  background-color: #192f2b;
+  font-family: "Handjet", monospace;
+  font-size: 1rem;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: #c1e2dd;
+  width: fit-content;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+  transition: color 0.3s ease-in-out;
+}
+
+#home-button:hover {
+  transition-delay: 0.1s;
+  background-color: #54a399;
+  color: #061e1a;
+}
+
+#home-button:active {
+  transition-delay: 0.1s;
+  background-color: #54a399;
+  color: #061e1a;
+}
+
+#home-button:focus {
+  background-color: #54a399;
+  color: #061e1a;
 }
 
 #player {
@@ -158,7 +197,7 @@ header p {
 }
 
 .result-modal h2 {
-  font-family: 'Handjet', monospace;
+  font-family: "Handjet", monospace;
   margin: 0 0 0.25rem 0;
   font-size: 3rem;
   text-transform: uppercase;
@@ -219,5 +258,21 @@ header p {
   }
   100% {
     opacity: 0.5;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .home-text {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  #home-button {
+    top: 11.6rem;
+  }
+
+  .home-text {
+    display: none;
   }
 }
